[gd_scene load_steps=3 format=2]

[ext_resource path="res://Managers/Cards/Focused/FocusedCardManager.tscn" type="PackedScene" id=1]
[ext_resource path="res://Managers/Cards/Focused/Inspector/InspectorCardManager.gd" type="Script" id=2]

[node name="InspectorCardManager" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="InspectTimer" type="Timer" parent="." index="0"]
wait_time = 0.4
one_shot = true
[connection signal="timeout" from="InspectTimer" to="." method="_on_InspectTimer_timeout"]
